SFDC DevOps Test/src/objects/Application_Inventory__c.object
<CustomObject>
    <description>TOOLKIT: Provides application component detailed related to customer requests.</description>
    <fields>
        <fullName>Build_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Storing estimated hours required for build1 phase.</description>
        <label>Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Storing estimated hours required for build2 phase.</description>
        <label>Build_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Complete__c</fullName>
        <description>This field specifies the build completion in percentage.</description>
        <label>Build % Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Build_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Defines the owner of the build</description>
        <label>Build Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Inventories (Build Owner)</relationshipLabel>
        <relationshipName>Application_Inventories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Text area to add additional information related to Application Inventory</description>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complexity_1__c</fullName>
        <description>Storing estimated complexity for particular type of work(Stage1)</description>
        <label>Complexity</label>
        <picklist>
            <controllingField>Type_1__c</controllingField>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Complex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complexity_2__c</fullName>
        <description>Storing estimated complexity for particular type of work(stage2)</description>
        <label>Complexity_2</label>
        <picklist>
            <controllingField>Type_2__c</controllingField>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Complex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Storing description about  New Application Inventory</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Storing estimated hours required for design phase1</description>
        <label>Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Storing estimated hours required for design phase2</description>
        <label>Design_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Design_Complete__c</fullName>
        <description>Storing  percenatge completion of design phase</description>
        <label>Design % Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Design_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Storing name of a user who is doing design</description>
        <label>Design Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Inventories</relationshipLabel>
        <relationshipName>Application_Inventories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <description>Request for which application inventory has been created</description>
        <label>Request</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Application Inventory</relationshipLabel>
        <relationshipName>Application_Inventory</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SIT_Complete__c</fullName>
        <description>Storing  percenatge completion of SIT phase</description>
        <label>SIT % Complete</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SIT_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Storing name of a user who is doing SIT</description>
        <label>SIT Owner</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Inventories (SIT Owner)</relationshipLabel>
        <relationshipName>Application_Inventories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Storing the phase for New Application Inventory</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Estimate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deploy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_1__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Storing estimated hours required for Test phase1</description>
        <label>Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Test_2__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Storing estimated hours required for Test phase2</description>
        <label>Test_2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Build__c</fullName>
        <description>Total time required in build phase</description>
        <formula>Build_1__c  +  Build_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Build</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Design__c</fullName>
        <description>Total time required in design phase</description>
        <formula>Design_1__c + Design_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Design</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Test__c</fullName>
        <description>Total time required in Test phase</description>
        <formula>Test_1__c + Test_2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Test</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_1__c</fullName>
        <description>Type of work in phase1</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow or Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports &amp; Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration (Real-Time)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration (Batch)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_2__c</fullName>
        <description>Type of work in phase2</description>
        <label>Type_2</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow or Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Administration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports &amp; Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration (Real-Time)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration (Batch)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Application Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AI-{0000}</displayFormat>
        <label>Application Inventory #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Inventory</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>